--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^10.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "express-messages": "^1.0.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
-    "pg": "^8.8.0"
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
