--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -21,7 +22,9 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
-    "pg": "^8.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
+    "strict": "^0.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
